# salesforce-community-portal-selenium-tester

./: .dockerignore  .gitignore  Dockerfile  README.md  requirements.txt  setup.cfg
k8s/: selenium-salesforce-client-cronjob.yaml
src/: main.py  settings.py
src/libs/: email.py  salesforce.py
src/models/: screenshot.py
src/templates/: email.html.jinja2
