[metadata]
name = salesforce-community-portal-selenium-tester
url = https://github.com/bensnyde/salesforce-community-portal-selenium-tester
project_urls =
    Documentation = https://github.com/bensnyde/salesforce-community-portal-selenium-tester
    Source = https://github.com/bensnyde/salesforce-community-portal-selenium-tester
    Issues = https://github.com/bensnyde/salesforce-community-portal-selenium-tester/issues/
description = "Email Screenshots from a list of Salesforce Community Portal Pages"
long_description = file: README.md
long_description_content_type = text/markdown
author = Benton Snyder
author_email = benton@bensnyde.me
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Programming Language :: Python
    License :: OSI Approved :: Apache License 2.0
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy